Issue #2115199 by johnv: Some cosmetic changes in workfow_admin_ui.pages.inc.
Issue #2019345 by johnv: Fixed notice when updating node in certain circumstances.
Issue #2019345 by johnv: Changed function names in workflow_rules to reflect they are Node API only.
Issue #2019345 by johnv: Fixed notice when an existing node does not have a workflow value yet.
Issue #1036580 by johnv: Fixed error in Workflow Node API on Node View page when another workflow was assigned to node type.
Issue #2119921 by johnv: Added dependency to Entity API module.
Issue #2102193 by johnv: Fixed documentation of hook_workflow() in workflow.api.inc
Issue #2019345 by johnv: Moved workflow_field_choices() to deprecated.inc, since it is completely replaced by WorkflowState->getOptions($node).
Issue #2019345 by johnv: Fixed messages from PAReview.sh.
Issue #2119921 by johnv: Moved workflow_node db functions to workflow.node.inc file.
Issue #2119921 by johnv: Moved workflow_requirements() to workflow.install file.
Issue #2019345 by johnv: Fixed messages from PAReview.sh.
Issue #2122541 by johnv: Added new submodule Workflow Node.
Issue #2122541 by johnv: Moved workflow_node-specific code from WorkflowState::deactivate() to hook workflownode_workflow('state delete').
Issue #2122541 by johnv: Changed call to workflow_node specific function in worflow_admin_ui.
Issue #2019345 by johnv: Fixed error when adding node after PAreview.
Issue #2122541 by johnv: Moved workflow_node-specific code from Workflow::delete() to hook workflownode_workflow('worflow delete').
Issue #2019345 by johnv: Removed duplication of Workflow*Transition::__construct.
Issue #2019345 by johnv: Fixed duplicate Workflow Form on Node View page.
Issue #2019345 by johnv: Moved saving of workflow_node_history to WorkflowTransition class.
Issue #2019345 by johnv: Fixed error when submitting a Workflow Field on a comment.
Issue #2102405 by johnv: Added Entity support for Workflow Executed Transitions (workflow_node_history).